--- a/templates/adminapp/StudentDetails.html
+++ b/templates/adminapp/StudentDetails.html
@@ -12,7 +12,7 @@
     <div class="container mx-auto p-4">
         <div class="bg-white p-6 rounded-lg shadow-md">
             <div class="flex items-center mb-4">
-                <input id="rollNumberInput" class="border border-gray-300 rounded-l-lg p-2 flex-grow" placeholder="Enter Roll Number" type="text"/>
+                <input id="rollNumberInput" class="border border-gray-300 rounded-l-lg p-2 flex-grow" placeholder="Enter Roll Number" type="text" onkeypress="searchStudent()"/>
                 <button onclick="searchStudent()" class="bg-red-600 text-white p-2 rounded-r-lg">
                     <i class="fas fa-search"></i> Search
                 </button>
