--- a/templates/adminapp/StudentDetails.html
+++ b/templates/adminapp/StudentDetails.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body class="bg-green-50">
-    {% include 'navbar/AdminNavBar.html' %}
+    {% include 'navbar/AdminNavbar.html' %}
 
     <div class="container mx-auto p-4">
         <div class="bg-white p-6 rounded-lg shadow-md">
@@ -30,13 +30,14 @@
                             <h2 class="text-lg font-bold">{{ student.name }}</h2>
                             <p>Registration Number: {{ student.student_id }}</p>
                             <p>No of Courses Registered: {{ student.course_grades|length }}</p>
+                            <p>Regulation : {{ student.batch }}</p>
                         </div>
                         <table class="w-full text-left border-collapse">
                             <thead>
                                 <tr>
                                     <th class="bg-red-600 text-white p-2">Course Code</th>
                                     <th class="bg-red-600 text-white p-2">Grade</th>
-                                    <th class="bg-red-600 text-white p-2">Batch</th>
+                                    <!-- <th class="bg-red-600 text-white p-2">Batch</th> -->
                                 </tr>
                             </thead>
                             <tbody>
@@ -44,7 +45,7 @@
                                     <tr class="{% cycle 'bg-gray-50' 'bg-white' %}">
                                         <td class="p-2">{{ course }}</td>
                                         <td class="p-2">{{ grade }}</td>
-                                        <td class="p-2">{{ student.batch }}</td>
+                                        <!-- <td class="p-2">{{ student.batch }}</td> -->
                                     </tr>
                                 {% endfor %}
                             </tbody>
