--- a/templates/adminapp/homepage.html
+++ b/templates/adminapp/homepage.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen">
-    {% include 'navbar/AdminNavBar.html' %}
+    {% include 'navbar/AdminNavbar.html' %}
 
     <main class="flex-grow flex flex-col items-center justify-center px-4 w-full">
         <div class="bg-white rounded-lg p-8 max-w-md w-full">
