--- a/templates/adminapp/StudentDetails.html
+++ b/templates/adminapp/StudentDetails.html
@@ -14,7 +14,7 @@
             <form method="post" class="flex items-center mb-4">
                 {% csrf_token %}
                 <input id="rollNumberInput" name="query" class="border border-gray-300 rounded-l-lg p-2 flex-grow" placeholder="Enter Student Id" type="number" onkeydown="handleKeyPress(event)"/>
-                <button type="submit" class="bg-red-600 text-white p-2 rounded-r-lg">
+                <button type="submit" class="text-white p-2 rounded-r-lg" style="background-color:rgb(165, 28, 36);">
                     <i class="fas fa-search"></i> Search
                 </button>
             </form>
