--- a/templates/navbar/AdminNavbar.html
+++ b/templates/navbar/AdminNavbar.html
@@ -1,5 +1,5 @@
 {%  load static %}
-<header class="w-full bg-red-600 shadow">
+<header class="w-full shadow" style="background-color:rgb(165, 28, 36);">
    <div class="container mx-auto flex flex-col sm:flex-row items-center justify-between py-4 px-6">
     <div class="flex items-center mb-4 sm:mb-0">
      <div class="text-white px-4 py-2 rounded">
