--- a/templates/adminapp/homepage.html
+++ b/templates/adminapp/homepage.html
@@ -26,6 +26,8 @@
                     <p class="mb-2">Drag and drop your CSV file here</p>
                     <p class="mb-2">or</p>
                     <input type="file" id="fileInput" name="csv_file" class="hidden" accept=".csv">
+                    <label for="batch">Enter Batch (e.g., Y20, Y21):</label>
+                    <input type="text" id="batch" name="batch" required placeholder="Y20">
                     <label for="fileInput" class="text-white px-4 py-2 rounded cursor-pointer" style="background-color:rgb(165, 28, 36);">Browse Files</label>
                 </div>
                 <p class="text-sm text-gray-500">Accepted file format: .CSV only</p>
